# valence-plonk

./: Cargo.toml  README.md
arkworks-poseidon/: Cargo.toml
arkworks-poseidon/src/: lib.rs
bn254-poseidon/: Cargo.toml
bn254-poseidon/src/: arithmetic.rs  poseidon.rs
halo2-scaffold/: Cargo.toml
halo2-scaffold/configs/: halo2_lib.json  poseidon.json
halo2-scaffold/data/: halo2_lib.pk  halo2_lib.snark  halo2_lib.vk  poseidon.snark  poseidon.vk
halo2-scaffold/examples/: poseidon.rs
halo2-scaffold/params/: kzg_bn254_2.srs
plonky-X/: Cargo.toml  bu.rs
plonky-X/src/: poseidon.rs
src/: poseidon.rs
