[package]
name = "arkworks-poseidon"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = "0.5"
ark-std = "0.5"
ark-relations = "0.5"
ark-r1cs-std = { version = "0.5", features = ["std"] }
ark-ed-on-bls12-381 = "0.5"
ark-bls12-381 = "0.5"
ark-snark = "0.5"
ark-groth16 = "0.5"

ark-crypto-primitives = { version = "0.5.0", features = ["r1cs", "std", "crh", "default"] }
