[package]
name = "valence-plonky2"
version = "0.1.0"
edition = "2024"

[dependencies]
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", tag = "v1.0.2" }
anyhow = "1"
base64 = "0.22"
serde = "1"
serde_with = "3"
serde_json = "1"
num-bigint = "0.4"
hex = "0.4"
num-traits = "0.2"
plonky2-bn254-poseidon = {path="../bn254-poseidon"}
ark-bn254 = "0.4.0"